tests/toy/neg/001147_mutation.toylang
program a = { if while then sleep; } .
